@@ -11,6 +11,7 @@ Cacti CHANGELOG
 -issue#1274: Host CPU script checks value prescence to prevent unnecessary errors
 -issue#1275: Fix issues with authPriv not supplying username/password
 -issue: When a checkbox table has no rows, the checkbox is resizable
+-feature: Links and names for Poller, Data Query and Data Sources now show in clog
 
 1.1.33
 -issue#1253: Automatically generated RRDtool DEF names in Cacti 1.1.32 break existing Graph Templates
